--- a/PetShop/gestorProducto/Templates/alimentoadultocat.html
+++ b/PetShop/gestorProducto/Templates/alimentoadultocat.html
@@ -30,9 +30,9 @@
 		<div>	
 			<div class="table-responsive">
 							<img src="{{ fila.imagen.url }}">
-							<h4>{{ fila.nombre }}</h4>
-							<p>{{ fila.precioVenta }}</p>
-							<button id="producto1" class="btn btn-warning">Agregar al Carrito</button>
+							<h3 style="color:brown">{{ fila.nombre }}</h3>
+							<h4>{{ fila.precioVenta }}</h4>
+							<button id="producto" class="btn btn-warning">Agregar al Carrito</button>
 							<p>{{ fila.descripcion }}</p>
 			</div>
 		</div>
