--- a/PetShop/gestorProducto/Templates/buscar.html
+++ b/PetShop/gestorProducto/Templates/buscar.html
@@ -16,9 +16,9 @@
 		<div>	
 			<div class="table-responsive">
 							<img src="{{ mostrar.imagen.url }}">
-							<h4>{{ mostrar.nombre }}</h4>
-							<p>{{ mostrar.precioVenta }}</p>
-							<button id="producto1" class="btn btn-warning">Agregar al Carrito</button>
+							<h3 style="color:brown">{{ mostrar.nombre }}</h3>
+							<h4>{{ mostrar.precioVenta }}</h4>
+							<button id="producto" class="btn btn-warning">Agregar al Carrito</button>
 							<p>{{ mostrar.descripcion }}</p>
 			</div>	
 		</div>	
@@ -28,6 +28,24 @@
 	{% if forloop.last %}</div>{% endif %}											
 {% endfor %}
 
+{% for mostrar in desc %}
+{% if forloop.first %}<div class="row">{% endif %}
+<div class="prod">
+	<div class ="row justify-content-center">
+		<div>	
+			<div class="table-responsive">
+							<img src="{{ mostrar.imagen.url }}">
+							<h3 style="color:brown">{{ mostrar.nombre }}</h3>
+							<h4>{{ mostrar.precioVenta }}</h4>
+							<button id="producto" class="btn btn-warning">Agregar al Carrito</button>
+							<p>{{ mostrar.descripcion }}</p>
+			</div>	
+		</div>	
+	</div>	
+</div>
+	{% if forloop.counter|divisibleby:34 %}</div><div class="row">{% endif %}
+	{% if forloop.last %}</div>{% endif %}											
+{% endfor %}
 
 {% endblock %}
 
