--- a/PetShop/gestorProducto/Templates/accesoriocat.html
+++ b/PetShop/gestorProducto/Templates/accesoriocat.html
@@ -31,7 +31,7 @@
 			<div class="table-responsive">
 							<img src="{{ fila.imagen.url }}">
 							<h3 style="color:brown">{{ fila.nombre }}</h3>
-							<h4>{{ fila.precioVenta }}</h4>
+							<h4>${{ fila.precioVenta }}</h4>
 							<button id="producto" class="btn btn-warning">Agregar al Carrito</button>
 							<p>{{ fila.descripcion }}</p>
 			</div>
