--- a/PetShop/gestorProducto/Templates/alimentocachorro.html
+++ b/PetShop/gestorProducto/Templates/alimentocachorro.html
@@ -29,9 +29,9 @@
 	<div class ="row justify-content-center">
 		<div>	
 			<div class="table-responsive">
-								<img src="{{ fila.imagen.url }}">
+							<img src="{{ fila.imagen.url }}">
 							<h3 style="color:brown">{{ fila.nombre }}</h3>
-							<h4>{{ fila.precioVenta }}</h4>
+							<h4>${{ fila.precioVenta }}</h4>
 							<button id="producto" class="btn btn-warning">Agregar al Carrito</button>
 							<p>{{ fila.descripcion }}</p>
 			</div>
