--- a/PetShop/gestorProducto/Templates/buscar.html
+++ b/PetShop/gestorProducto/Templates/buscar.html
@@ -17,7 +17,7 @@
 			<div class="table-responsive">
 							<img src="{{ mostrar.imagen.url }}">
 							<h3 style="color:brown">{{ mostrar.nombre }}</h3>
-							<h4>{{ mostrar.precioVenta }}</h4>
+							<h4>${{ mostrar.precioVenta }}</h4>
 							<button id="producto" class="btn btn-warning">Agregar al Carrito</button>
 							<p>{{ mostrar.descripcion }}</p>
 			</div>	
@@ -36,7 +36,7 @@
 			<div class="table-responsive">
 							<img src="{{ mostrar.imagen.url }}">
 							<h3 style="color:brown">{{ mostrar.nombre }}</h3>
-							<h4>{{ mostrar.precioVenta }}</h4>
+							<h4>${{ mostrar.precioVenta }}</h4>
 							<button id="producto" class="btn btn-warning">Agregar al Carrito</button>
 							<p>{{ mostrar.descripcion }}</p>
 			</div>	
