--- a/PetShop/gestorProducto/Templates/loginn.html
+++ b/PetShop/gestorProducto/Templates/loginn.html
@@ -31,14 +31,12 @@
 							</div>
 								<input type="password" class="password" name="password" placeholder="Password..." class="form-control" >
 						</div>
-
 							<div class="d-flex justify-content-center mt-3 login_container">
 				 				<input class="btn login_btn" type="submit" value="Login">
 				   			</div>
-					</form>
-
-				</div>
-		
+							<a href="{% url 'social:begin' 'facebook' %}">Login con facebook</a>
+					</form>		
+				</div>	
 				<div class="mt-4">
 					<div class="d-flex justify-content-center links">
 						No tienes cuenta? <a href="{% url 'regis' %}" class="ml-2">Registrate</a>
