--- a/PetShop/gestorProducto/Templates/index.html
+++ b/PetShop/gestorProducto/Templates/index.html
@@ -3,6 +3,9 @@
 	<head>
 		<meta charset = "utf-8">
 		<title>JoJu - PetShop</title>
+		{% load pwa %}
+		{% progressive_web_app_meta %}
+		
 		<link rel="icon" type="image/png" href={% static 'img/fotos/Icon.png' %}>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
