--- a/PetShop/gestorProducto/Templates/index.html
+++ b/PetShop/gestorProducto/Templates/index.html
@@ -22,6 +22,9 @@
 		<link rel="stylesheet" href="{% static 'js/script2.js' %}">
 		<link rel="stylesheet" href="{% static 'js/script3.js' %}">
 		<link rel="stylesheet" href="{% static 'js/validaciones.js' %}">
+		<!-- Manifest -->
+		<link rel="manifest" href="/manifest.json">
+		
 	</head>
 	<body>
 <section><!-- Icono de canasta como boton-->
